service_mesh/must-gather-istio/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-35844d0317a98a0d0c8b344f25a92d68d4624387f2dfe3cf23888584c24d5986/cluster-scoped-resources/admissionregistration.k8s.io/validatingwebhookconfigurations/autoscaling.openshift.io.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
  creationTimestamp: "2023-03-03T19:38:02Z"
  generation: 2
  labels:
    k8s-app: cluster-autoscaler-operator
  name: autoscaling.openshift.io
  resourceVersion: "9515"
  uid: 410bb078-dd4c-45eb-bdf9-8d317b6c037a
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVVENDQWptZ0F3SUJBZ0lJSXFQdnhtVnlFcEl3RFFZSktvWklodmNOQVFFTEJRQXdOakUwTURJR0ExVUUKQXd3cmIzQmxibk5vYVdaMExYTmxjblpwWTJVdGMyVnlkbWx1WnkxemFXZHVaWEpBTVRZM056ZzNNakU1T0RBZQpGdzB5TXpBek1ETXhPVE0yTXpoYUZ3MHlOVEExTURFeE9UTTJNemxhTURZeE5EQXlCZ05WQkFNTUsyOXdaVzV6CmFHbG1kQzF6WlhKMmFXTmxMWE5sY25acGJtY3RjMmxuYm1WeVFERTJOemM0TnpJeE9UZ3dnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRQzNxcXROWlVRTkJ0eTFaVjRQYlVxdG5nNDZJREdKMEsvdgp1OXRJYjN5cU4zUn [...]
    service:
      name: cluster-autoscaler-operator
      namespace: openshift-machine-api
      path: /validate-clusterautoscalers
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: clusterautoscalers.autoscaling.openshift.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - autoscaling.openshift.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - clusterautoscalers
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVVENDQWptZ0F3SUJBZ0lJSXFQdnhtVnlFcEl3RFFZSktvWklodmNOQVFFTEJRQXdOakUwTURJR0ExVUUKQXd3cmIzQmxibk5vYVdaMExYTmxjblpwWTJVdGMyVnlkbWx1WnkxemFXZHVaWEpBTVRZM056ZzNNakU1T0RBZQpGdzB5TXpBek1ETXhPVE0yTXpoYUZ3MHlOVEExTURFeE9UTTJNemxhTURZeE5EQXlCZ05WQkFNTUsyOXdaVzV6CmFHbG1kQzF6WlhKMmFXTmxMWE5sY25acGJtY3RjMmxuYm1WeVFERTJOemM0TnpJeE9UZ3dnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRQzNxcXROWlVRTkJ0eTFaVjRQYlVxdG5nNDZJREdKMEsvdgp1OXRJYjN5cU4zUn [...]
    service:
      name: cluster-autoscaler-operator
      namespace: openshift-machine-api
      path: /validate-machineautoscalers
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: machineautoscalers.autoscaling.openshift.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - autoscaling.openshift.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - machineautoscalers
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
