service_mesh/must-gather-istio/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-35844d0317a98a0d0c8b344f25a92d68d4624387f2dfe3cf23888584c24d5986/cluster-scoped-resources/admissionregistration.k8s.io/validatingwebhookconfigurations/istiod-basic-istio-system.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"admissionregistration.k8s.io/v1","kind":"ValidatingWebhookConfiguration","metadata":{"annotations":{"maistra.io/mesh-generation":"2.3.1-1-2"},"labels":{"app":"istiod","app.kubernetes.io/component":"istio-discovery","app.kubernetes.io/instance":"istio-system","app.kubernetes.io/managed-by":"maistra-istio-operator","app.kubernetes.io/name":"istio-discovery","app.kubernetes.io/part-of":"istio","app.kubernetes.io/version":"2.3.1-1-2","istio":"istiod","istio.io/rev":"basic","mais [...]
    maistra.io/mesh-generation: 2.3.1-1-2
  creationTimestamp: "2023-03-03T20:02:59Z"
  generation: 2
  labels:
    app: istiod
    app.kubernetes.io/component: istio-discovery
    app.kubernetes.io/instance: istio-system
    app.kubernetes.io/managed-by: maistra-istio-operator
    app.kubernetes.io/name: istio-discovery
    app.kubernetes.io/part-of: istio
    app.kubernetes.io/version: 2.3.1-1-2
    istio: istiod
    istio.io/rev: basic
    maistra-version: 2.1.6
    maistra.io/owner: istio-system
    maistra.io/owner-name: basic
    release: istio
  name: istiod-basic-istio-system
  resourceVersion: "34594"
  uid: f50cc59d-55b7-459e-ae61-3db8983f4107
webhooks:
- admissionReviewVersions:
  - v1beta1
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvVENDQWVXZ0F3SUJBZ0lSQUo1K0VzVVBPNnh3Zk03bU5zMHJsZFl3RFFZSktvWklodmNOQVFFTEJRQXcKR0RFV01CUUdBMVVFQ2hNTlkyeDFjM1JsY2k1c2IyTmhiREFlRncweU16QXpNRE15TURBek1EbGFGdzB6TXpBeQpNamd5TURBek1EbGFNQmd4RmpBVUJnTlZCQW9URFdOc2RYTjBaWEl1Ykc5allXd3dnZ0VpTUEwR0NTcUdTSWIzCkRRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRHdvWCtqRC9aYUVLbjNMTFRuaXpXdWJoc2xSc3pVSXJJTEl4NEgKZU8vZHR5dnU2RDhJNmlya2crTFZKVk04MEh3S2FYRXVkSUxObVdFZmgxUVZuRzErZEFFOVB2RUlObXhONS9DUAo0RmpiVDVKc2NTRX [...]
    service:
      name: istiod-basic
      namespace: istio-system
      path: /validate
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validation.istio.io
  namespaceSelector:
    matchExpressions:
    - key: maistra.io/member-of
      operator: In
      values:
      - istio-system
  objectSelector: {}
  rules:
  - apiGroups:
    - authentication.maistra.io
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - '*'
    scope: '*'
  - apiGroups:
    - rbac.maistra.io
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - '*'
    scope: '*'
  - apiGroups:
    - security.istio.io
    - networking.istio.io
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - '*'
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
