service_mesh/must-gather-istio/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-35844d0317a98a0d0c8b344f25a92d68d4624387f2dfe3cf23888584c24d5986/cluster-scoped-resources/admissionregistration.k8s.io/validatingwebhookconfigurations/machine-api.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
  creationTimestamp: "2023-03-03T19:37:43Z"
  generation: 2
  name: machine-api
  resourceVersion: "8341"
  uid: 19aecdd5-d4ef-4ab6-8cb9-51946a18bfb3
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVVENDQWptZ0F3SUJBZ0lJSXFQdnhtVnlFcEl3RFFZSktvWklodmNOQVFFTEJRQXdOakUwTURJR0ExVUUKQXd3cmIzQmxibk5vYVdaMExYTmxjblpwWTJVdGMyVnlkbWx1WnkxemFXZHVaWEpBTVRZM056ZzNNakU1T0RBZQpGdzB5TXpBek1ETXhPVE0yTXpoYUZ3MHlOVEExTURFeE9UTTJNemxhTURZeE5EQXlCZ05WQkFNTUsyOXdaVzV6CmFHbG1kQzF6WlhKMmFXTmxMWE5sY25acGJtY3RjMmxuYm1WeVFERTJOemM0TnpJeE9UZ3dnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRQzNxcXROWlVRTkJ0eTFaVjRQYlVxdG5nNDZJREdKMEsvdgp1OXRJYjN5cU4zUn [...]
    service:
      name: machine-api-operator-webhook
      namespace: openshift-machine-api
      path: /validate-machine-openshift-io-v1beta1-machine
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: validation.machine.machine.openshift.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - machine.openshift.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - machines
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVVENDQWptZ0F3SUJBZ0lJSXFQdnhtVnlFcEl3RFFZSktvWklodmNOQVFFTEJRQXdOakUwTURJR0ExVUUKQXd3cmIzQmxibk5vYVdaMExYTmxjblpwWTJVdGMyVnlkbWx1WnkxemFXZHVaWEpBTVRZM056ZzNNakU1T0RBZQpGdzB5TXpBek1ETXhPVE0yTXpoYUZ3MHlOVEExTURFeE9UTTJNemxhTURZeE5EQXlCZ05WQkFNTUsyOXdaVzV6CmFHbG1kQzF6WlhKMmFXTmxMWE5sY25acGJtY3RjMmxuYm1WeVFERTJOemM0TnpJeE9UZ3dnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRQzNxcXROWlVRTkJ0eTFaVjRQYlVxdG5nNDZJREdKMEsvdgp1OXRJYjN5cU4zUn [...]
    service:
      name: machine-api-operator-webhook
      namespace: openshift-machine-api
      path: /validate-machine-openshift-io-v1beta1-machineset
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: validation.machineset.machine.openshift.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - machine.openshift.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - machinesets
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
