service_mesh/must-gather-istio/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-35844d0317a98a0d0c8b344f25a92d68d4624387f2dfe3cf23888584c24d5986/cluster-scoped-resources/admissionregistration.k8s.io/validatingwebhookconfigurations/performance-addon-operator.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
    service.beta.openshift.io/inject-cabundle: "true"
  creationTimestamp: "2023-03-03T19:33:31Z"
  generation: 68
  name: performance-addon-operator
  ownerReferences:
  - apiVersion: config.openshift.io/v1
    kind: ClusterVersion
    name: version
    uid: f94aa017-c80d-4634-b5f4-9a5482e17f41
  resourceVersion: "59473"
  uid: 301f6458-5618-4a2d-bb1d-b5afb611f33e
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVVENDQWptZ0F3SUJBZ0lJSXFQdnhtVnlFcEl3RFFZSktvWklodmNOQVFFTEJRQXdOakUwTURJR0ExVUUKQXd3cmIzQmxibk5vYVdaMExYTmxjblpwWTJVdGMyVnlkbWx1WnkxemFXZHVaWEpBTVRZM056ZzNNakU1T0RBZQpGdzB5TXpBek1ETXhPVE0yTXpoYUZ3MHlOVEExTURFeE9UTTJNemxhTURZeE5EQXlCZ05WQkFNTUsyOXdaVzV6CmFHbG1kQzF6WlhKMmFXTmxMWE5sY25acGJtY3RjMmxuYm1WeVFERTJOemM0TnpJeE9UZ3dnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRQzNxcXROWlVRTkJ0eTFaVjRQYlVxdG5nNDZJREdKMEsvdgp1OXRJYjN5cU4zUn [...]
    service:
      name: performance-addon-operator-service
      namespace: openshift-cluster-node-tuning-operator
      path: /validate-performance-openshift-io-v2-performanceprofile
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: vwb.performance.openshift.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - performance.openshift.io
    apiVersions:
    - v2
    operations:
    - CREATE
    - UPDATE
    resources:
    - performanceprofiles
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
