service_mesh/must-gather-istio/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-35844d0317a98a0d0c8b344f25a92d68d4624387f2dfe3cf23888584c24d5986/cluster-scoped-resources/admissionregistration.k8s.io/validatingwebhookconfigurations/snapshot.storage.k8s.io.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
    service.beta.openshift.io/inject-cabundle: "true"
  creationTimestamp: "2023-03-03T19:36:34Z"
  generation: 2
  labels:
    app: csi-snapshot-webhook
  name: snapshot.storage.k8s.io
  resourceVersion: "5970"
  uid: cefa53d4-e32c-4bcc-9339-9fd564d8e21f
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVVENDQWptZ0F3SUJBZ0lJSXFQdnhtVnlFcEl3RFFZSktvWklodmNOQVFFTEJRQXdOakUwTURJR0ExVUUKQXd3cmIzQmxibk5vYVdaMExYTmxjblpwWTJVdGMyVnlkbWx1WnkxemFXZHVaWEpBTVRZM056ZzNNakU1T0RBZQpGdzB5TXpBek1ETXhPVE0yTXpoYUZ3MHlOVEExTURFeE9UTTJNemxhTURZeE5EQXlCZ05WQkFNTUsyOXdaVzV6CmFHbG1kQzF6WlhKMmFXTmxMWE5sY25acGJtY3RjMmxuYm1WeVFERTJOemM0TnpJeE9UZ3dnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRQzNxcXROWlVRTkJ0eTFaVjRQYlVxdG5nNDZJREdKMEsvdgp1OXRJYjN5cU4zUn [...]
    service:
      name: csi-snapshot-webhook
      namespace: openshift-cluster-storage-operator
      path: /volumesnapshot
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: volumesnapshotclasses.snapshot.storage.k8s.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - snapshot.storage.k8s.io
    apiVersions:
    - v1beta1
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - volumesnapshots
    - volumesnapshotcontents
    - volumesnapshotclasses
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
